--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -28,21 +28,9 @@ CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
-#CONFIG_PACKAGE_ipv6helper=y
 #ipv6
-# CONFIG_PACKAGE_dnsmasq is not set
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dnsmasq_full_auth=y
-CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-
+#CONFIG_PACKAGE_ipv6helper=y
 #CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-
-CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=y
-CONFIG_PACKAGE_dnsmasq_full_noid=y
-CONFIG_PACKAGE_dnsmasq_full_tftp=y
-
 #CONFIG_PACKAGE_6in4=y
 #CONFIG_PACKAGE_6rd=y
 #CONFIG_PACKAGE_6to4=y
@@ -52,6 +40,24 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
+
+
+#tbcc加速默认集成高通通用SFE加速
+
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+
+
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
+CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
+
+
 
 CONFIG_PACKAGE_cgi-io=y
 
@@ -76,7 +82,7 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
+# CONFIG_PACKAGE_luci-proto-ipv6 is not set
 CONFIG_PACKAGE_luci-proto-ppp=y
 
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
@@ -109,9 +115,43 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-uugamebooster=y
 
 # CONFIG_PACKAGE_luci-app-easymesh is not set
-# CONFIG_PACKAGE_luci-app-guest-wifi is not set
+CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
-# CONFIG_PACKAGE_luci-app-wifischedule is not set
+CONFIG_PACKAGE_luci-app-wifischedule=y
+
+
+#多播及APP插件
+
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+
+CONFIG_PACKAGE_luci-app-syncdial=y
+
+#CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_PACKAGE_luci-app-n2n_v2=y
+
+
+CONFIG_PACKAGE_luci-app-wireguard=y
+
+CONFIG_PACKAGE_luci-proto-wireguard=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+
+
+CONFIG_PACKAGE_luci-app-pppoe-relay=y
+
+CONFIG_PACKAGE_luci-app-pptp-server=y
+
+CONFIG_PACKAGE_luci-app-udpxy=y
+
+CONFIG_PACKAGE_luci-app-uhttpd=y
+
+
+
+#网易云音乐
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
+
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
 
 
 CONFIG_PACKAGE_luci-app-passwall=y
@@ -135,10 +175,13 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
 
+
+
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-theme-ifit=y
+# CONFIG_PACKAGE_luci-theme-ifit is not set
 CONFIG_PACKAGE_luci-theme-argon_armygreen=y
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 
