--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -41,7 +41,10 @@ CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PACKAGE_kmod-usb3 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
-
+#文件传输
+CONFIG_PACKAGE_luci-app-filetransfer=y
+CONFIG_PACKAGE_luci-app-fileassistant=y
+CONFIG_PACKAGE_luci-app-filebrowser=y
 #tbcc加速默认集成高通通用SFE加速
 
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
@@ -82,7 +85,7 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
-# CONFIG_PACKAGE_luci-proto-ipv6 is not set
+CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
