--- a/config/AX6.config
+++ b/config/AX6.config
@@ -17,16 +17,14 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
 
 
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM=y
-
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
 CONFIG_PACKAGE_luci-app-turboacc=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV
-# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
-
 
 #语言
 CONFIG_LUCI_LANG_en=y
@@ -37,11 +35,11 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
 #ipv6
-#CONFIG_PACKAGE_ipv6helper=y
-#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-#CONFIG_PACKAGE_6in4=y
-#CONFIG_PACKAGE_6rd=y
-#CONFIG_PACKAGE_6to4=y
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_6to4=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
@@ -137,11 +135,3 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 
 #主题
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
-#插件区
-#CONFIG_PACKAGE_luci-app-adguardhome is not set
-CONFIG_PACKAGE_luci-theme-argon=y
-
-CONFIG_PACKAGE_luci-theme-argon_armygreen=y
-
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-argon-config=y
