--- a/.github/workflows/Boos-AX6.yml
+++ b/.github/workflows/Boos-AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: Almighty-AX6
+name: Boos-AX6
 
 on:
   repository_dispatch:
@@ -31,9 +31,7 @@ on:
 
 env:
   REPO_URL: https://github.com/Boos4721/openwrt
-  REPO_BRANCH: master 
-#  REPO_URL: https://github.com/robimarko/openwrt
-#  REPO_BRANCH: ipq807x-5.15 
+  REPO_BRANCH: master  
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6.config
   DIY_P1_SH: diy-part1.sh
@@ -44,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: Almighty-AX6
-  PRODUCT_NAME: Almighty-AX6
+  FILE_NAME: Boos-AX6
+  PRODUCT_NAME: Boos-AX6
 
 jobs:
   build:
