--- a/config/AX6-5.15.config
+++ b/config/AX6-5.15.config
@@ -43,6 +43,7 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
 
+#tbcc加速默认集成高通通用SFE加速
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
 
@@ -54,6 +55,7 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
+
 
 
 #插件区
