--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -51,8 +51,21 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 
 CONFIG_PACKAGE_cgi-io=y
 
+#NSS加速相关
+CONFIG_PACKAGE_kmod-qca-nss-drv-qdisc=y
+CONFIG_PACKAGE_kmod-qca-nss-ecm=y
+CONFIG_PACKAGE_kmod-qca-nss-drv=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr=y
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-64=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64=y
+CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
+CONFIG_PACKAGE_nss-firmware-ipq8074=y
+
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
+CONFIG_PACKAGE_qca-ssdk-shell=y
 
 
 CONFIG_PACKAGE_luci-app-passwall=y
@@ -114,8 +127,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_nss-firmware-ipq8074=y
-CONFIG_PACKAGE_qca-ssdk-shell=y
+
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
