--- a/config/AX6-5.15.config
+++ b/config/AX6-5.15.config
@@ -60,24 +60,24 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 
 #插件区
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome is not set
 
 # CONFIG_PACKAGE_luci-app-advanced is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+#CONFIG_PACKAGE_luci-app-guest-wifi is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-ddns=y
 
-#CONFIG_PACKAGE_luci-app-dawn=y
-CONFIG_PACKAGE_luci-app-n2n_v2=y
+#CONFIG_PACKAGE_luci-app-dawn is not set
+#CONFIG_PACKAGE_luci-app-n2n_v2 is not set
 
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-dnsfilter=y
-CONFIG_PACKAGE_luci-app-nps=y
+#CONFIG_PACKAGE_luci-app-dnsfilter is not set
+#CONFIG_PACKAGE_luci-app-nps is not set
 
-#CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-oaf is not set
 
 CONFIG_PACKAGE_luci-app-openclash=y
 
@@ -105,10 +105,10 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs is not set
 
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=y
