--- a/config/AX6.config
+++ b/config/AX6.config
@@ -2,10 +2,6 @@ CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
 CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
 
-
-CONFIG_LIBCURL_NGHTTP2=y
-
-
 CONFIG_LIBCURL_COOKIES=y	
 CONFIG_LIBCURL_FILE=y	
 CONFIG_LIBCURL_FTP=y	
@@ -16,10 +12,12 @@ CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y	
 CONFIG_LIBSODIUM_MINIMAL=y
 
+
 #语言
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
+#虚拟内存
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
@@ -48,7 +46,6 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
 
-
 #tbcc加速默认集成高通通用SFE加速
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
@@ -61,16 +58,6 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
-
-
-
-#NSS加速相关
-
-
-CONFIG_PACKAGE_cgi-io=y
-
-CONFIG_PACKAGE_kmod-qca-nss-dp=y
-CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 
 
 
@@ -97,100 +84,90 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 
 
+
+#插件区
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-#CONFIG_PACKAGE_luci-app-adguardhome is not set
+
+# CONFIG_PACKAGE_luci-app-adguardhome is not set
+
 # CONFIG_PACKAGE_luci-app-advanced is not set
-#CONFIG_PACKAGE_luci-app-guest-wifi is not set
-#CONFIG_PACKAGE_luci-app-dawn is not set
-#CONFIG_PACKAGE_luci-app-n2n_v2 is not set
-#CONFIG_PACKAGE_luci-app-nps is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
+
+
+# CONFIG_PACKAGE_luci-app-easymesh is not set
+
+# CONFIG_PACKAGE_luci-app-frpc is not set
+# CONFIG_PACKAGE_luci-app-frps is not set
+
+# CONFIG_PACKAGE_luci-app-guest-wifi is not set
+
+
+# CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
+
+CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+# CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_PACKAGE_luci-app-n2n_v2=y
+
+CONFIG_PACKAGE_luci-app-netdata=y
+
+CONFIG_PACKAGE_luci-app-ntpc=y
+# CONFIG_PACKAGE_luci-app-dnsfilter is not set
+# CONFIG_PACKAGE_luci-app-nps is not set
+
 #CONFIG_PACKAGE_luci-app-oaf is not set
-# CONFIG_PACKAGE_luci-app-vsftpd is not set
+
+CONFIG_PACKAGE_luci-app-openclash=y
+
+
+# CONFIG_PACKAGE_luci-app-pppoe-relay is not set
+
+# CONFIG_PACKAGE_luci-app-pptp-server is not set
+
+# CONFIG_PACKAGE_luci-app-pushbot is not set
+
+# CONFIG_PACKAGE_luci-app-qos is not set
 
 # CONFIG_PACKAGE_luci-app-smartdns is not set
 
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
-# CONFIG_PACKAGE_luci-app-dnsfilter is not set
-# CONFIG_PACKAGE_luci-app-qos is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
+# CONFIG_PACKAGE_luci-app-eqos is not set
+# CONFIG_PACKAGE_luci-app-sqm is not set
 
-#--------------------------------
 
-CONFIG_PACKAGE_luci-app-wifischedule=y
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs is not set
 
-CONFIG_PACKAGE_luci-app-diag-core=y
+# CONFIG_PACKAGE_luci-app-syncdial is not set
+
+CONFIG_PACKAGE_luci-app-ttyd=y
 
 CONFIG_PACKAGE_luci-app-udpxy=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
 
+CONFIG_PACKAGE_luci-app-uhttpd=y
 
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
 
-
 CONFIG_PACKAGE_luci-app-uugamebooster=y
+
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
 
-CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
-CONFIG_PACKAGE_kmod-ipt-fullconenat=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
 
+CONFIG_PACKAGE_luci-app-wireguard=y
 
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-
-
-
-CONFIG_PACKAGE_libiwinfo-lua=y
-CONFIG_PACKAGE_liblua=y
-CONFIG_PACKAGE_liblucihttp=y
-CONFIG_PACKAGE_liblucihttp-lua=y
-CONFIG_PACKAGE_libubus-lua=y
-CONFIG_PACKAGE_lua=y
-CONFIG_PACKAGE_luci=y
-
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-lib-base=y
-CONFIG_PACKAGE_luci-lib-ip=y
-CONFIG_PACKAGE_luci-lib-jsonc=y
-CONFIG_PACKAGE_luci-lib-nixio=y
-CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-mod-network=y
-CONFIG_PACKAGE_luci-mod-status=y
-CONFIG_PACKAGE_luci-mod-system=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-proto-ppp=y
-
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-
-CONFIG_PACKAGE_nss-firmware-ipq8074=y
-CONFIG_PACKAGE_qca-ssdk-shell=y
-
-CONFIG_PACKAGE_rpcd=y
-CONFIG_PACKAGE_rpcd-mod-file=y
-CONFIG_PACKAGE_rpcd-mod-iwinfo=y
-CONFIG_PACKAGE_rpcd-mod-luci=y
-CONFIG_PACKAGE_rpcd-mod-rrdns=y
-CONFIG_PACKAGE_uhttpd=y
-CONFIG_PACKAGE_uhttpd-mod-ubus=y
-
+CONFIG_PACKAGE_luci-proto-wireguard=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
 
 #主题
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
-# CONFIG_PACKAGE_luci-theme-ifit is not set
+CONFIG_PACKAGE_luci-theme-ifit=y
 CONFIG_PACKAGE_luci-theme-argon_armygreen=y
-
